--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
      <link rel = "stylesheet" type = "text/css" href = "stylesheet.css" />
-     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css?family=Montserrat:600display=swap" rel="stylesheet">
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <script type="text/javascript", src="drawChart.js"></script>
   </head>
